traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:30: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalDiagonal:33: error: expected start of definition
	override def forward()  {
                 ^TraversalDiagonal:36: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalDiagonal:39: error: expected start of definition
	override def backward() {
                 ^TraversalDiagonal:42: error: Unmatched closing brace '}' ignored here
}
^